objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Processing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Processing</label>
        <referenceTo>Order_Processing__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Waiting for Information</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_PO_Number__c</fullName>
        <label>UK - PO-Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Bussines_Unit__c</fullName>
        <formula>TEXT(Owner:User.sf42_Business_Unit__c)</formula>
        <label>Bussines Unit</label>
        <type>Text</type>
    </fields>
    <label>PT - Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Order_Processing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Closed_Orders</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Account__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed PO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Purchase_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Order_Processing__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Purchase Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Purchase_Orders1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Order_Processing__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2020</value>
        </filters>
        <label>My Purchase Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Orders</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Account__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Waiting for Information,In Progress,Delayed</value>
        </filters>
        <filters>
            <field>Order_Date__c</field>
            <operation>greaterThan</operation>
            <value>4/1/2015</value>
        </filters>
        <filters>
            <field>Order_Date__c</field>
            <operation>lessThan</operation>
            <value>4/30/2015</value>
        </filters>
        <label>Open Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PO# {000000}</displayFormat>
        <label>PO-Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>